[package]
name = "lampy"
version = "0.3.0"
edition = "2024"

[dependencies]
firefly-rust = { version = "0.11.0", features = ["alloc", "talc"] }

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true      # Enable link-time optimization
